--- a/xinchengShop/xinchengShop/Info.plist
+++ b/xinchengShop/xinchengShop/Info.plist
@@ -33,7 +33,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxe4d53f58f26cd989</string>
+				<string>wxe4d53f58f26cd9892·</string>
 			</array>
 		</dict>
 		<dict>
